--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -182,6 +182,10 @@ body{
 }
 .refresh-flex button{
     color: rgb(38, 38, 177);
+   
+}
+.refresh-flex button svg{
+    font-size: 30px;
 }
 .agents-list .survey_type{
     font-family: "Poppins", sans-serif;
